MDEV-20732 MDB now correctly estimates a length of the FORMAT() result for doubles in scientific notation with a big integer part.